--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
-@import url('./header.css');
-@import url('./footer.css');
+@import url('/header.css');
+@import url('/footer.css');
 
 :root {
     --fonte-principal: 'Montserrat', sans-serif;
